manifests/overlays/web/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: scoap3-backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
