manifests/overlays/web/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scoap3-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts: [DOMAIN]
      secretName: scoap3-backend-cert
  rules:
    - host: DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scoap3-backend-web
                port:
                  name: http
